# gtest_template

./: CMakeLists.txt  README.md  calc.h  db_if.h  db_impl.h  db_mock.h  main.cpp  tests.cpp
